# crewai_loan_processing_agent

./: .gitignore  README.md  notes.txt  pyproject.toml  streamlit_app.py
src/loan_processing_crew/: crew.py  main.py
src/loan_processing_crew/config/: agents.yaml  tasks.yaml
src/loan_processing_crew/tools/: loan_tools.py
synthetic_data/: loan_applications.json
